--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+Cython==0.29.23
+cython
 hdbscan==0.8.24
 matplotlib==3.1.1
 numpy==1.17.1
@@ -6,4 +8,4 @@ scikit-learn==0.21.3
 scipy==1.3.2
 seaborn==0.9.0
 sklearn==0.0
-#opencv-contrib-python==4.1.1.26
+opencv-contrib-python==4.1.1.26
